--- a/src/components/QuillEditor.css
+++ b/src/components/QuillEditor.css
@@ -236,7 +236,7 @@
 
 .dotted-line-paragraph {
     position: relative;
-    padding-left: 30px !important;
+    padding-left: 4% !important;
     margin-bottom: 20px !important;
 }
 
