--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
 body {
   background-color: #1e1e1e
 }
+
+/* Global scrollbar styles */
+::-webkit-scrollbar {
+  width: 3px;
+}
+
+::-webkit-scrollbar-track {
+  background: #1e1e1e
+}
+
+::-webkit-scrollbar-thumb {
+  background: #c1c1c1;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #a8a8a8;
+}
