--- a/src/components/QuillEditor.css
+++ b/src/components/QuillEditor.css
@@ -5,12 +5,15 @@
 
 .ql-container.ql-snow {
     border: 0 !important;
+    height: 70vh !important;
 }
 
 .editor-container {
+    
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 80vw;
     height: 90vh;
     background-color: #f4f4f9;
     font-family: "Arial", sans-serif;
@@ -279,7 +282,8 @@
 
 .chart-controls {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    padding: 10px;
 }
 
 .comment-message {
@@ -292,7 +296,6 @@ textarea {
 }
 
 .inline-comment-list {
-
     background-color: #2a2a2a;
     border-left: 1px solid #3a3a3a;
     padding: 10px;
@@ -308,6 +311,11 @@ textarea {
 
 .action-btn-comment {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     margin-bottom: 10px;
+}
+
+.voice-item {
+    display: flex;
+    justify-content: space-between;
 }
