--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
-body {
+/* body {
   background-image: linear-gradient(rgba(30, 30, 30, 0.9), rgba(30, 30, 30, 0.9)), url('../public/logo192.png');
-  /* background-size: cover; */
+ 
   background-size: 200px 200px;
   background-position: center;
   background-color: #1e1e1e
 }
 
-/* Global scrollbar styles */
+
 ::-webkit-scrollbar {
   width: 3px;
 }
@@ -29,4 +29,6 @@ body {
   justify-content: center; 
   align-items: center;    
   height: 100vh;
-}
+} */
+
+
